<resources>
    <string name="app_name">Quintessence Learning</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_questions">Questions</string>
    <string name="title_account">Account</string>
    <string name="title_feedback">Feedback</string>
    <string name="get_started">Let\'s get started. First, pick a time that you want to be notified each day with the next question. Then, Click finsh, and you\'ll get your first question! \n Don\'t worry, you can change this later on in settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="todays_question">Today\'s Question: </string>
    <string name="your_account">Your Account</string>
    <string name="account_name">Name: </string>
    <string name="account_email">Email: </string>
    <string name="change_email">Change Email</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="about_text">
        \t\t\t\tQuintessence Learning is a mobile app created for parents who want to engage their children in meaningful dialogue to take advantage of the waining time they have with their children.  The app conveniently pushes out daily questions and activities to get the most out of the time with your children and get them off their devices.  We understand how busy parents are today and easy it is to fall into tell me “two things about your day” trap…or even worse the TV and device rabbit hole.
        \n\t\t\t\tWith standardized testing results as the barometer of a teacher’s success, we also notice that the necessary creative and critical thinking skills are not being developed during school hours.  We are leveraging all the latest research and a 40-year educator who has focused on early childhood and Gifted and Talented Education.  Through decades of lessons plans spanning pre-kindergarten to high school, these are the absolute best questions and activities to foster creative thinking and emotional development.
    </string>
    <string name="submit_question">Submit Question</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_description">You can use this screen to submit questions you have thought of, or any feedback you have about our program!</string>
    <string name="submit_feedback_description">Fill out the form below if you have any thoughts about our app. We\'ll get back to you as soon as possible!</string>
    <string name="ip">http://192.168.1.252:3001</string>
    <string name="submit">Submit</string>
    <string name="FAQ">FAQ goes here</string>
    <string name="FAQ_title">Frequently Asked Questions</string>
    <string name="ebook_title">E-Book</string>
    <string name="ebook">E-Book goes here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_match">Please make sure your passwords match</string>
    <string name="time_updated">Notification time has been updated</string>
    <string name="question_properties">Question Properties</string>
    <string name="save_question">Save Question</string>
    <string name="search_hint">Search</string>
    <string name="view_saved_questions">View Saved Questions</string>
    <string name="account_type">Account Type</string>
    <string name="account_join_date">Join Date</string>
    <string name="welcome_to_qlearning">Welcome to QLearning</string>
    <string name="please_login">Please login, or create a new account</string>
    <string name="register">Make a New Account</string>
    <string name="create_new">Create a New Account</string>
    <string name="fillout_fields">Please make sure to fill out all fields</string>
    <string name="current_notif_time">Current Notification Time</string>
    <string name="thank_you">Thank you for subscribing!</string>
    <string name="type_trial">Premium (Free 14 Day Trial)</string>
    <string name="type_admin">Admin</string>
    <string name="type_subscribed">Premium (Monthly Subscription)</string>
    <string name="type_basic">Basic</string>
    <string name="premium_feature">You\'ve discovered a premium feature! Please purchase the premium subscription to access this feature.</string>
    <string name="premium_title">Premium Feature</string>

    <string name="how_to_save_title">How do I save a question?</string>
    <string name="how_to_save_text">You can save a question by long pressing on the question in the questions tab.</string>
</resources>
